# custom_quiz_website

./: README.md  main.py  pyproject.toml
app/src/static/styles/: home_styles.css  quiz_page.css
app/src/templates/: docker_quiz_menu.html  home.html  quiz.html  quiz_menu.html
database/: database.py  test_database.py
database/basic_quizzes/: docker_basics.py  kubernetes_basics.py
